--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
@@ -1,12 +1,32 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% load bootstrap %}
 {% block main %}
 
 <form method="POST">
     {% csrf_token %}
     {{ form|bootstrap }}
-    <button type="submit" class="btn btn-success">Salvar</button>
-    
+    <button type="submit" class="btn btn-main">Salvar</button>
+    {% if object %}
+        <a href="{% url 'delete_hora_extra' object.id %}" class="btn btn-danger">
+            Deletar
+        </a>
+
+    {% endif %}
+    <button onclick="utilizouHoraExtra({{ object.id }})"
+            class="btn btn-info" type="button">
+        Marcar como utilizada
+    </button>
 </form>
+
+<h2 id="horas_atualizadas"> {{ object.funcionario.total_horas_extra }}..</h2>
+
 <br>
-{% endblock %}  
+<p id="mensagem"></p>
+{% endblock %}
+
+{% block static %}
+    <script src="{% static 'bootstrap/js/jquery.js' %}"></script>
+    <script src="{% static 'bootstrap/js/funcoes-ajax.js' %}"></script>
+{% endblock %}
