--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -7,10 +7,10 @@
       One of three columns
     </div>
     <div class="col-sm">
-      Ola {{ usuario.funcionario.nome }}
+      Ola {{ usuario.funcionario.nome }}<br>
       <a href="{% url 'list_funcionarios' %}">Generenciar funcionarios</a><br>
       <a href="{% url 'list_departamentos' %}">Generenciar departamentos</a><br>
-      <a href="{% url 'list_hora_extra' %}">Generenciar Banco de horas</a>
+      <a href="{% url 'list_hora_extra' %}">Generenciar Banco de horas</a><br>
     </div>
     <div class="col-sm">
         <a href="{% url 'logout' %}">Logout</a>
