--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -15,4 +15,14 @@
     <a href="{% url 'create_funcionario' %}" class="btn btn-info">
         Novo
     </a>
+    <a href="{% url 'relatorio_funcionarios' %}" class="btn btn-info">
+        Relátorio de Funcionarios
+    </a>
+    <a href="{% url 'relatorio_funcionarios_html' %}" class="btn btn-info">
+        Relatorio de funcionarios HTML
+    </a>
+    <a href="{% url 'relatorio_funcionarios_html_debug' %}" class="btn btn-danger">
+        Relatorio de funcionarios HTML
+    </a>
+
 {% endblock %}
