--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_list.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_list.html
@@ -22,5 +22,9 @@
     <a href="{% url 'exportar_csv' %}" class="btn btn-info">
         Exportar CSV
     </a>
+    <a href="{% url 'exportar_excel' %}" class="btn btn-info">
+        Exportar Excel
+    </a>
+
 
 {% endblock %}
